# LogToTxt

./: .gitignore  CMakeLists.txt  README
src/: logtotxt.cpp  logtotxt.h  main.cpp
src/common/proto/: messages_robocup_ssl_detection.proto  messages_stoxs_datamodel.proto  messages_stoxs_logfile.proto  referee.proto
templates/: license
